# meta-ai-orchestrator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SELF_CHECK_REPORT.md  setup-github.bat
.github/workflows/: ci.yml  claude.yml
crates/agents/: Cargo.toml
crates/agents/src/: claude.rs  codewhisperer.rs  copilot.rs  cursor.rs  lib.rs  openai.rs  selector.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  metrics.rs  telemetry.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  evaluation.rs  lib.rs  orchestrator.rs  rag.rs
crates/eval/: Cargo.toml
crates/eval/src/: evaluator.rs  fuzzer.rs  lib.rs  metrics.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: dag.rs  dispatcher.rs  lib.rs  scheduler.rs
crates/rag/: Cargo.toml
crates/rag/src/: embeddings.rs  engine.rs  lib.rs  vector_store.rs
docs/architecture/: system-overview.md
src/: main.rs
