[package]
name = "meta-ai-orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["Meta-AI Team"]
description = "Enterprise-grade AI orchestration platform with multi-LLM support"
license = "MIT"
repository = "https://github.com/meta-ai/orchestrator"
keywords = ["ai", "orchestration", "llm", "rag", "dag"]
categories = ["api-bindings", "asynchronous", "command-line-utilities"]

[workspace]
members = [
    "crates/core",
    "crates/orchestrator",
    "crates/agents",
    "crates/rag",
    "crates/eval",
    "crates/cli",
    "crates/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Meta-AI Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP clients
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression"] }

# Database & embeddings
qdrant-client = "1.8"
candle-core = "0.3"
candle-transformers = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
prometheus = "0.13"

# CLI/TUI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
ratatui = "0.26"
crossterm = "0.27"

# Security & Config
dotenv = "0.15"
secrecy = "0.8"
config = "0.14"
notify = "6.1"

# Testing
mockall = "0.12"
wiremock = "0.6"
proptest = "1.4"
criterion = "0.5"

# Additional deps
once_cell = "1.19"
rand = "0.8"

# Utils
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "5.5"
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
debug = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
meta-ai-common = { path = "crates/common" }