[package]
name = "meta-ai-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace deps
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true

# Local deps
meta-ai-common = { path = "../common" }

[dev-dependencies]
tokio-test = "0.4"
mockall.workspace = true
proptest.workspace = true