[package]
name = "meta-ai-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace deps
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true

# Local deps
meta-ai-common = { path = "../common" }
meta-ai-core = { path = "../core" }

[dev-dependencies]
tokio-test = "0.4"
proptest.workspace = true