[package]
name = "meta-ai-rag"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace deps
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true

# Vector DB
qdrant-client.workspace = true

# Embeddings  
candle-core.workspace = true
candle-transformers.workspace = true

# Local deps
meta-ai-common = { path = "../common" }
meta-ai-core = { path = "../core" }

[dev-dependencies]
tokio-test = "0.4"
mockall.workspace = true